# funds-explorer-scraper-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml
src/funds_explorer_scraper_api/: __main__.py  _main.py  api.py  scraper.py  settings.py  settings.toml
