[tool.poetry]
name = "funds-explorer-scraper-api"
version = "2023.4.24.0"
description = ""
authors = ["Jairo <jairo.araujo.silva@gmail.com>"]
packages = [{include = "funds_explorer_scraper_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.24.0"
tomli = "^2.0.1"
lxml = "^4.9.2"
fastapi = "^0.95.1"
uvicorn = "^0.21.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
